--- a/src/main/webapp/engineering.html
+++ b/src/main/webapp/engineering.html
@@ -26,9 +26,7 @@
         <el-menu :default-openeds="['1', '3']">
 
             <el-menu-item index="1">工程队</el-menu-item>
-
-            <el-menu-item index="2">个人信息</el-menu-item>
-
+            <el-button @click="personInfo" target="_blank">个人信息</el-button>
             <el-menu-item index="3">消息通知</el-menu-item>
         </el-menu>
     </el-aside>
@@ -192,11 +190,43 @@
                                 @click="MyHandleDelete(scope.$index, scope.row)"
                         >踢出
                         </el-button>
+                        <el-button
+                                size="mini"
+                                @click="handleModify(scope.$index, scope.row)"
+                        >修改
+                        </el-button>
 
                     </template>
                 </el-table-column>
             </el-table>
         </template>
+
+        <!--        对我的成员修改任务的对话框-->
+        <el-dialog title="修改任务" :visible.sync="teamModifyFormVisible">
+            <el-form ref="modifyTask" :model="modifyTask" label-width="80px" :rules="rules">
+                <el-form-item label="任务名称" prop="taskName">
+                    <el-input v-model="modifyTask.taskName" autocomplete="off"></el-input>
+                </el-form-item>
+                <el-form-item label="任务难度" prop="level">
+                    <template>
+                        <el-radio v-model="modifyTask.level" label="0">简单</el-radio>
+                        <el-radio v-model="modifyTask.level" label="1">困难</el-radio>
+                    </template>
+                </el-form-item>
+                <el-form-item label="截止时间" prop="deadline">
+                    <el-col :span="11">
+                        <el-date-picker type="date" placeholder="选择日期" v-model="modifyTask.deadline"
+                                        style="width: 100%;" autocomplete="off"></el-date-picker>
+                    </el-col>
+                    <el-col class="line" :span="2">-</el-col>
+
+                </el-form-item>
+                <el-form-item>
+                    <el-button id="teamModifyButton" type="primary" @click="teamModifyTask('modifyTask')">修改</el-button>
+                    <el-button @click="teamModifyFormVisible = false">取消</el-button>
+                </el-form-item>
+            </el-form>
+        </el-dialog>
 
         <!--        经理点击查看后的对话框-->
 
@@ -501,6 +531,7 @@
                 //添加表单
                 dialogFormVisible: false,
                 teamAddFormVisible: false,
+                teamModifyFormVisible: false,
 
                 // 当前页码
                 currentPage: 4,
@@ -524,6 +555,16 @@
                         {required: true, message: '请选择任务难度', trigger: 'blur'},
                     ],
 
+                },
+                modifyTask:{
+                    taskName: '',
+                    level: '',
+                    deadline: '',
+                    status: '',
+                    taskId: '',
+                    userId: '',
+                    parentTaskId: '',
+                    generalId: '',
                 },
 
 
@@ -664,6 +705,11 @@
                 });
             },
 
+            //个人信息跳转
+            personInfo() {
+                window.location.href = "http://localhost:8080/qg-engineering-management-system/personalInfo.html";
+            },
+
 
             //查询下级用户
             querySon() {
@@ -704,7 +750,7 @@
                     if (valid) {
                         const _this = this;
                         _this.addTask.parentTaskId = _this.myTaskTableData[0].taskId;
-                        _this.addTask.generalId = _this.myTaskTableData[0].taskId;
+                        _this.addTask.generalId = _this.myTaskTableData[0].generalId;
                         _this.addTask.status = 0;
                         axios({
                             method: "post",
@@ -722,6 +768,52 @@
                         return false;
                     }
                 });
+            },
+
+            //修改任务
+            teamModifyTask(formName) {
+                this.$refs[formName].validate((valid) => {
+                    if (valid) {
+                        const _this = this;
+                        _this.modifyTask.parentTaskId = _this.myTaskTableData[0].taskId;
+                        _this.modifyTask.generalId = _this.myTaskTableData[0].generalId;
+                        _this.modifyTask.status = 0;
+
+                        axios({
+                            method: "post",
+                            url: "http://localhost:8080/qg-engineering-management-system/task/modify",
+                            data: _this.modifyTask,
+                        }).then(function (resp) {
+                            if (resp.data.code === 200) {
+                                document.getElementById("teamModifyButton").disabled = true;
+                                _this.teamModifyFormVisible = false;
+                                _this.$message.success("任务修改成功");
+                                setTimeout(_this.refresh, 500);
+                            }
+                        })
+                    } else {
+                        return false;
+                    }
+                });
+            },
+
+            handleModify(index,row) {
+                const _this = this;
+                if (row.userId === '') {
+                    _this.$message.error("目前队伍没有成员");
+                    return;
+                }
+                if (row.taskId === '' || row.taskId === 0) {
+                    _this.$message.error("他还没有任务,请先为他添加任务");
+                } else  {
+                    this.$refs.singleTable.setCurrentRow(row);
+                    _this.modifyTask.userId = row.userId;
+                    _this.modifyTask.taskId = row.taskId;
+                    _this.modifyTask.taskName = row.taskName;
+                    // _this.modifyTask.level = 1;
+                    _this.modifyTask.deadline = row.deadline;
+                    _this.teamModifyFormVisible = true;
+                }
             },
 
             //对我的队伍的人添加任务
