--- a/src/main/webapp/foreman.html
+++ b/src/main/webapp/foreman.html
@@ -117,6 +117,7 @@
         </el-form>
 
 
+        <el-divider></el-divider>
         <!--包工头的工程小组的队伍-->
         <template>
             <el-table
@@ -250,6 +251,7 @@
                 </el-form-item>
             </el-form>
         </el-dialog>
+        <el-divider></el-divider>
 
         <!--所有小工的信息(查询框)-->
         <el-form :inline="true" :model="queryUser" class="queryUser">
@@ -399,6 +401,8 @@
                 console.log(resp.data.msg);
                 _this.querySon();
             })
+            //建立ws连接
+            _this.createWebSocket();
 
 
         },
@@ -447,6 +451,7 @@
                 address: '上海市普陀区金沙江路 1518 弄'
             };
             return {
+                websocket:'',
 
                 //工程小组详情表格
                 groupTableVisible: false,
@@ -579,6 +584,67 @@
         },
 
         methods: {
+
+            createWebSocket() {
+
+                // var heartCheck = {
+                //     timeout: 1000,        //1分钟发一次心跳
+                //     timeoutObj: null,
+                //     serverTimeoutObj: null,
+                //     reset: function(){
+                //         clearTimeout(this.timeoutObj);
+                //         clearTimeout(this.serverTimeoutObj);
+                //         return this;
+                //     },
+                //     start: function(){
+                //         var _this = this;
+                //         this.timeoutObj = setTimeout(function(){
+                //             //这里发送一个心跳，后端收到后，返回一个心跳消息，
+                //             //onmessage拿到返回的心跳就说明连接正常
+                //             _this.handleMsg("ping");
+                //             console.log("ping!")
+                //             _this.serverTimeoutObj = setTimeout(function(){//如果超过一定时间还没重置，说明后端主动断开了
+                //                 _this.websocket.close();     //如果onclose会执行reconnect，我们执行ws.close()就行了.如果直接执行reconnect 会触发onclose导致重连两次
+                //             }, _this.timeout)
+                //         }, this.timeout)
+                //     }
+                // };
+
+                const _this = this;
+                _this.websocket = new WebSocket('ws://localhost:8080/qg-engineering-management-system/webSocket')
+                // _this.global.setWs(_this.websocket);
+                // 连接成功时
+
+                // _this.websocket.onopen = _this.onopen();
+                _this.websocket.onopen = () => {
+                    // heartCheck.reset().start();
+                    console.log('连接成功')
+                    // _this.websocket.send("点击提交后的信息");
+                }
+                _this.websocket.onmessage = event => {
+                    // 后端发送的消息在event.data中
+                    console.log("后台发送消息")
+                    console.log(event.data)
+                    _this.myMsg = event.data;
+                    const h = this.$createElement;
+
+                    this.$notify({
+                        title: '消息通知',
+                        message: h('i', { style: 'color: teal'}, event.data)
+                    });
+                }
+                _this.websocket.onclose = function (e) {
+                    console.log('关闭了',e.code + ' ' + e.reason + ' ' + e.wasClean);
+                }
+                // // 路由跳转时结束websocket链接
+                // this.$router.afterEach(function () {
+                //     websocket.close()
+                // })
+                // 监听窗口关闭事件，当窗口关闭时，主动去关闭websocket连接，防止连接还没断开就关闭窗口，server端会抛异常
+                window.onbeforeunload = function () {
+                    _this.websocket.close()
+                }
+            },
             //退出登录
             loginOut() {
                 const _this = this;
