--- a/src/main/webapp/chiefPeople.html
+++ b/src/main/webapp/chiefPeople.html
@@ -24,13 +24,17 @@
     <el-aside width="200px" style="background-color: rgb(238, 241, 246)">
         <el-menu :default-openeds="['1', '3']">
 
-            <el-menu-item index="1">管理团队</el-menu-item>
+            <el-menu-item index="1">
+                <el-button @click="teamButton" target="_blank">管理团队</el-button>
+            </el-menu-item>
 
             <el-menu-item index="2">
                 <el-button @click="personInfo" target="_blank">个人信息</el-button>
             </el-menu-item>
 
-            <el-menu-item index="3">消息通知</el-menu-item>
+            <el-menu-item index="3">
+                <el-button @click="noticeButton" target="_blank">消息通知</el-button>
+            </el-menu-item>
         </el-menu>
     </el-aside>
 
@@ -145,6 +149,7 @@
                 </el-form-item>
             </el-form>
         </el-dialog>
+        <el-divider></el-divider>
 
         <!--我的队伍-->
         <template>
@@ -428,6 +433,7 @@
                 </el-form-item>
             </el-form>
         </el-dialog>
+        <el-divider></el-divider>
 
         <!--所有经理的信息(查询框)-->
         <el-form :inline="true" :model="queryUser" class="queryUser">
@@ -557,10 +563,13 @@
 <script src="element-ui/lib/index.js"></script>
 <link rel="stylesheet" href="element-ui/lib/theme-chalk/index.css">
 
+<!--<script type="module">-->
+<!--    import global from './js/global.js'-->
+<!--    Vue.prototype.global = global-->
+<!--</script>-->
 
-<script>
 
-
+<script type="module">
     new Vue({
         el: "#chiefPeople",
 
@@ -582,7 +591,11 @@
                 _this.selectMyTeam(resp.data.msg);
                 _this.querySon();
             })
+
+            //建立ws连接
+            _this.createWebSocket();
         },
+
         data() {
 
 
@@ -621,6 +634,8 @@
             };
 
             return {
+                websocket: '',
+
 
                 //工程小组详情表格
                 groupTableVisible: false,
@@ -687,7 +702,7 @@
                     generalId: '',
                 },
 
-                modifyTask:{
+                modifyTask: {
                     taskName: '',
                     level: '',
                     deadline: '',
@@ -766,10 +781,94 @@
 
         methods: {
 
+            createWebSocket() {
+
+                // var heartCheck = {
+                //     timeout: 1000,        //1分钟发一次心跳
+                //     timeoutObj: null,
+                //     serverTimeoutObj: null,
+                //     reset: function(){
+                //         clearTimeout(this.timeoutObj);
+                //         clearTimeout(this.serverTimeoutObj);
+                //         return this;
+                //     },
+                //     start: function(){
+                //         var _this = this;
+                //         this.timeoutObj = setTimeout(function(){
+                //             //这里发送一个心跳，后端收到后，返回一个心跳消息，
+                //             //onmessage拿到返回的心跳就说明连接正常
+                //             _this.handleMsg("ping");
+                //             console.log("ping!")
+                //             _this.serverTimeoutObj = setTimeout(function(){//如果超过一定时间还没重置，说明后端主动断开了
+                //                 _this.websocket.close();     //如果onclose会执行reconnect，我们执行ws.close()就行了.如果直接执行reconnect 会触发onclose导致重连两次
+                //             }, _this.timeout)
+                //         }, this.timeout)
+                //     }
+                // };
+
+                const _this = this;
+                _this.websocket = new WebSocket('ws://localhost:8080/qg-engineering-management-system/webSocket')
+                // _this.global.setWs(_this.websocket);
+                // 连接成功时
+
+                // _this.websocket.onopen = _this.onopen();
+                _this.websocket.onopen = () => {
+                    // heartCheck.reset().start();
+                    console.log('连接成功')
+                    // _this.websocket.send("点击提交后的信息");
+                }
+                _this.websocket.onmessage = event => {
+                    // 后端发送的消息在event.data中
+                    console.log("后台发送消息")
+                    console.log(event.data)
+                    _this.myMsg = event.data;
+                    const h = this.$createElement;
+
+                    this.$notify({
+                        title: '消息通知',
+                        message: h('i', {style: 'color: teal'}, event.data)
+                    });
+                }
+                _this.websocket.onclose = function (e) {
+                    console.log('关闭了', e.code + ' ' + e.reason + ' ' + e.wasClean);
+                }
+                // // 路由跳转时结束websocket链接
+                // this.$router.afterEach(function () {
+                //     websocket.close()
+                // })
+                // 监听窗口关闭事件，当窗口关闭时，主动去关闭websocket连接，防止连接还没断开就关闭窗口，server端会抛异常
+                window.onbeforeunload = function () {
+                    _this.websocket.close()
+                }
+            },
+
+            // handleMsg(msg) {
+            //     let that = this;
+            //     console.log(that.global.ws);
+            //     if (that.global.ws && that.global.ws.readyState === 1) {
+            //         console.log("发送信息", msg);
+            //         that.global.ws.send(msg);
+            //     }
+            //     that.global.ws.onmessage =  event => {
+            //         console.log("收到服务器内容", event.data);
+            //         that.$message.success(event.data);
+            //     };
+            // },
+
             //个人信息跳转
             personInfo() {
                 window.location.href = "http://localhost:8080/qg-engineering-management-system/personalInfo.html";
             },
+
+            teamButton(){
+                window.location.href = "http://localhost:8080/qg-engineering-management-system/chiefPeople.html";
+            },
+
+            noticeButton(){
+                window.location.href = "http://localhost:8080/qg-engineering-management-system/notice.html";
+            },
+
+
 
             //退出登录
             loginOut() {
@@ -779,6 +878,7 @@
                     url: "http://localhost:8080/qg-engineering-management-system/user/loginOut",
                 }).then(function (resp) {
                     _this.$message.success("您已经退出登录");
+                    // _this.websocket.close();
                     setTimeout(_this.out, 1000);
                 })
             },
@@ -944,7 +1044,7 @@
                 }
             },
 
-            handleModify(index,row) {
+            handleModify(index, row) {
                 const _this = this;
                 if (row.userId === '') {
                     _this.$message.error("目前队伍没有成员");
@@ -952,7 +1052,7 @@
                 }
                 if (row.taskId === '' || row.taskId === 0) {
                     _this.$message.error("他还没有任务,请先为他添加任务");
-                } else  {
+                } else {
                     this.$refs.singleTable.setCurrentRow(row);
                     _this.modifyTask.userId = row.userId;
                     _this.modifyTask.taskId = row.taskId;
@@ -1283,6 +1383,10 @@
             },
         },
     });
+
+    import global from './js/global.js'
+
+    Vue.prototype.global = global
 </script>
 
 </body>
