--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -104,16 +104,20 @@
 <script src="js/axios-0.18.0.js"></script>
 <script src="element-ui/lib/index.js"></script>
 <link rel="stylesheet" href="element-ui/lib/theme-chalk/index.css">
+<script type="module">
+    import global from './js/global.js'
+    Vue.prototype.global = global
+</script>
 
-<script>
+
+<script type="module">
     //创建vue对象
     new Vue({
+
+
         el: "#loginDiv",
         data() {
             const validateUserName = (rule, value, callback) => {
-
-
-
                 const _this = this;
                 axios({
                     method: "post",
@@ -129,6 +133,8 @@
                 })
             };
             return {
+
+                websocket:'',
                 //职位
                 position:'',
                 //登录表单
@@ -148,7 +154,7 @@
                         {required: true, message: '请输入密码', trigger: 'blur'},
                         {min: 6, max: 20, message: '长度在 6 到 20 个字符', trigger: 'blur'}
                     ],
-                }
+                },
 
             }
         },
@@ -164,13 +170,14 @@
                             data: _this.user,
                         }).then(function (resp) {
 
-
                             if (resp.data.code === 200) {
                                 _this.position = resp.data.data;
                                 _this.$message({
                                     message: '登录成功~3秒后跳转',
                                     type: 'success'
                                 });
+
+                                // _this.createWebSocket();
                                 //通过用户的职位进行页面的跳转
                                 setTimeout(_this.changeMain,2000);
 
@@ -185,6 +192,70 @@
                         return false;
                     }
                 });
+            },
+
+            createWebSocket() {
+
+                // var heartCheck = {
+                //     timeout: 1000,        //1分钟发一次心跳
+                //     timeoutObj: null,
+                //     serverTimeoutObj: null,
+                //     reset: function(){
+                //         clearTimeout(this.timeoutObj);
+                //         clearTimeout(this.serverTimeoutObj);
+                //         return this;
+                //     },
+                //     start: function(){
+                //         var _this = this;
+                //         this.timeoutObj = setTimeout(function(){
+                //             //这里发送一个心跳，后端收到后，返回一个心跳消息，
+                //             //onmessage拿到返回的心跳就说明连接正常
+                //             _this.handleMsg("ping");
+                //             console.log("ping!")
+                //             _this.serverTimeoutObj = setTimeout(function(){//如果超过一定时间还没重置，说明后端主动断开了
+                //                 _this.websocket.close();     //如果onclose会执行reconnect，我们执行ws.close()就行了.如果直接执行reconnect 会触发onclose导致重连两次
+                //             }, _this.timeout)
+                //         }, this.timeout)
+                //     }
+                // };
+
+                const _this = this;
+                _this.websocket = new WebSocket('ws://localhost:8080/qg-engineering-management-system/webSocket')
+                // _this.global.setWs(_this.websocket);
+                // 连接成功时
+
+                // _this.websocket.onopen = _this.onopen();
+                _this.websocket.onopen = () => {
+                    // heartCheck.reset().start();
+                    console.log('连接成功')
+                    // _this.websocket.send("点击提交后的信息");
+                }
+
+                _this.websocket.onmessage = event => {
+                    // 后端发送的消息在event.data中
+                    console.log("后台发送消息")
+                    console.log(event.data)
+                    _this.myMsg = event.data;
+                    // _this.$message.success(event.data);
+                    const h = this.$createElement;
+
+                    this.$notify({
+                        title: '消息通知',
+                        message: h('i', { style: 'color: teal'}, event.data)
+                    });
+                }
+
+                _this.websocket.onclose = function (e) {
+                    console.log('关闭了',e.code + ' ' + e.reason + ' ' + e.wasClean);
+                }
+                // // 路由跳转时结束websocket链接
+                // this.$router.afterEach(function () {
+                //     websocket.close()
+                // })
+                // 监听窗口关闭事件，当窗口关闭时，主动去关闭websocket连接，防止连接还没断开就关闭窗口，server端会抛异常
+                window.onbeforeunload = function () {
+                    _this.websocket.close()
+                }
             },
 
             resetForm(formName) {
@@ -223,7 +294,7 @@
                 }else if (position === '' || position === -1){
                     this.$message.error("请登录~");
                 }
-            }
+            },
         },
     });
 
