--- a/src/main/webapp/personalInfo.html
+++ b/src/main/webapp/personalInfo.html
@@ -59,12 +59,16 @@
         <el-menu :default-openeds="['1', '3']">
 
             <el-menu-item index="1">
-                <el-button @click="myTeam" target="_blank">队伍</el-button>
+                <el-button @click="myTeam" target="_blank">管理团队</el-button>
             </el-menu-item>
 
-            <el-menu-item index="2">个人信息</el-menu-item>
+            <el-menu-item index="2">
+                <el-button @click="personInfo" target="_blank">个人信息</el-button>
+            </el-menu-item>
 
-            <el-menu-item index="3">消息通知</el-menu-item>
+            <el-menu-item index="3">
+                <el-button @click="noticeButton" target="_blank">消息通知</el-button>
+            </el-menu-item>
         </el-menu>
     </el-aside>
 
@@ -84,7 +88,7 @@
         <!--        个人信息页面-->
         <el-form ref="user" :model="user" label-width="80px" :rules="rules">
             <el-form-item label="用户名称" prop="username">
-                <el-input v-model="user.username" style="width: 300px;" ></el-input>
+                <el-input v-model="user.username" style="width: 300px;"></el-input>
 
                 <!--                <el-upload-->
                 <!--                        class="avatar-uploader"-->
@@ -217,12 +221,12 @@
                 }
             };
             return {
-                passwordForm:{
+                passwordForm: {
 
-                    userId:'',
-                    oldPassword:'',
-                    newPassword:'',
-                    checkPassword:'',
+                    userId: '',
+                    oldPassword: '',
+                    newPassword: '',
+                    checkPassword: '',
                 },
 
                 //修改密码弹框
@@ -231,12 +235,12 @@
 
                 //修改表单中的用户信息
                 user: {
-                    userId:'',
+                    userId: '',
                     username: '',
                     password: '',
                     email: '',
                     position: '',
-                    gender:'',
+                    gender: '',
                 },
 
 
@@ -244,12 +248,12 @@
                 imageUrl: '',
 
                 //老用户信息,比对新信息,防止用户频繁请求数据库修改
-                oldUser:{
-                    username:'',
+                oldUser: {
+                    username: '',
                     password: '',
                     email: '',
                     position: '',
-                    gender:'',
+                    gender: '',
                 },
 
                 //登录表单
@@ -297,7 +301,7 @@
                         axios({
                             method: "post",
                             url: "http://localhost:8080/qg-engineering-management-system/user/changePassword",
-                            data: _this.passwordForm.oldPassword +"&" + _this.passwordForm.newPassword,
+                            data: _this.passwordForm.oldPassword + "&" + _this.passwordForm.newPassword,
                         }).then(function (resp) {
                             if (resp.data.code === 200) {
                                 _this.$message({
@@ -353,6 +357,15 @@
                 }
             },
 
+            //个人信息跳转
+            personInfo() {
+                window.location.href = "http://localhost:8080/qg-engineering-management-system/personalInfo.html";
+            },
+
+            noticeButton(){
+                window.location.href = "http://localhost:8080/qg-engineering-management-system/notice.html";
+            },
+
             //修改个人信息
             onSubmit(formName) {
                 this.$refs[formName].validate((valid) => {
@@ -380,16 +393,16 @@
                         axios({
                             method: "post",
                             url: "http://localhost:8080/qg-engineering-management-system/user/modifyInfo",
-                            data: r +"&"+_this.username,
+                            data: r + "&" + _this.username,
                         }).then(function (resp) {
                             if (resp.data.code === 200) {
                                 _this.$message({
                                     message: '信息修改成功~',
                                     type: 'success'
                                 });
-                                setTimeout(_this.refresh,1000);
+                                setTimeout(_this.refresh, 1000);
 
-                            }  else {
+                            } else {
                                 _this.$message.error('未知错误,请联系管理员');
                             }
                         })
@@ -404,7 +417,6 @@
             resetForm(formName) {
                 this.$refs[formName].resetFields();
             },
-
 
 
             //退出登录
