--- a/src/main/webapp/chiefPeople.html
+++ b/src/main/webapp/chiefPeople.html
@@ -49,8 +49,11 @@
                     </el-dropdown-menu>
                 </el-dropdown>
                 <el-tag v-model="username">{{username}}</el-tag>
+
             </el-header>
 
+            <el-tag >项目完成进度条</el-tag><br>
+            <el-progress :percentage="percentage" status="success"></el-progress>
             <!--        我的任务列表-->
             <el-form :inline="true" :model="myTaskTableData" class="myTaskTableData">
                 <template>
@@ -643,6 +646,10 @@
 
             //数据
             return {
+
+                //
+                percentage:0,
+
                 websocket: '',
 
 
@@ -807,15 +814,32 @@
                 }
                 _this.websocket.onmessage = event => {
                     // 后端发送的消息在event.data中
-                    console.log("后台发送消息")
                     console.log(event.data)
                     _this.myMsg = event.data;
                     const h = this.$createElement;
+
+                    if (_this.myTaskTableData.length > 0){
+                        console.log(_this.myTaskTableData[0].userId);
+                        _this.selectAllTaskCount(_this.myTaskTableData[0].userId);
+                    }
 
                     this.$notify({
                         title: '消息通知',
                         message: h('i', {style: 'color: teal'}, event.data)
                     });
+                    //
+                    // let data = JSON.stringify(event.data);
+                    //
+                    // console.log(data)
+                    // console.log(data.code)
+                    // console.log(data.msg)
+                    // if(event.data.code === 200) {
+                    //     this.$notify({
+                    //         title: '消息通知',
+                    //         message: h('i', {style: 'color: teal'}, event.data.msg)
+                    //     });
+                    // }
+
                 }
                 _this.websocket.onclose = function (e) {
                     console.log('关闭了', e.code + ' ' + e.reason + ' ' + e.wasClean);
@@ -1187,6 +1211,18 @@
                 }).then(function (resp) {
                     if (resp.data.code === 200) {
                         _this.myTaskTableData[0].allTaskCount = resp.data.data;
+                        console.log(resp.data.data)
+
+                        const array = resp.data.data.split("/");
+                        if (array[1] === '0' || array[0] === '0') {
+                            _this.percentage = 0;
+                        }else {
+                            console.log(array[0])
+                            console.log(array[1])
+                            _this.percentage = parseInt(array[0])*100  / parseInt(array[1])
+                            console.log(_this.percentage);
+                        }
+
                     }
                 })
             },
