--- a/src/main/webapp/chiefPeople.html
+++ b/src/main/webapp/chiefPeople.html
@@ -35,6 +35,10 @@
                 <el-menu-item index="3">
                     <el-button @click="noticeButton" target="_blank">消息通知</el-button>
                 </el-menu-item>
+
+                <el-menu-item index="3">
+                    <el-button @click="chatButton" target="_blank">聊天室</el-button>
+                </el-menu-item>
             </el-menu>
         </el-aside>
 
@@ -867,6 +871,9 @@
             //通知跳转
             noticeButton() {
                 window.location.href = "http://localhost:8080/qg-engineering-management-system/notice.html";
+            },
+            chatButton(){
+                window.location.href = "http://localhost:8080/qg-engineering-management-system/chat.html";
             },
 
 
