--- a/src/main/webapp/notice.html
+++ b/src/main/webapp/notice.html
@@ -23,6 +23,10 @@
             <el-menu-item index="3">
                 <el-button @click="noticeButton" target="_blank">消息通知</el-button>
             </el-menu-item>
+
+            <el-menu-item index="3">
+                <el-button @click="chatButton" target="_blank">聊天室</el-button>
+            </el-menu-item>
         </el-menu>
     </el-aside>
 
@@ -144,6 +148,10 @@
         },
 
         methods: {
+
+            chatButton(){
+                window.location.href = "http://localhost:8080/qg-engineering-management-system/chat.html";
+            },
 
 
             //删除选中的通知
