--- a/src/main/webapp/personalInfo.html
+++ b/src/main/webapp/personalInfo.html
@@ -69,6 +69,10 @@
             <el-menu-item index="3">
                 <el-button @click="noticeButton" target="_blank">消息通知</el-button>
             </el-menu-item>
+
+            <el-menu-item index="3">
+                <el-button @click="chatButton" target="_blank">聊天室</el-button>
+            </el-menu-item>
         </el-menu>
     </el-aside>
 
@@ -295,6 +299,10 @@
         },
 
         methods: {
+
+            chatButton(){
+                window.location.href = "http://localhost:8080/qg-engineering-management-system/chat.html";
+            },
 
 
             //修改密码提交表单
