--- a/src/main/webapp/worker.html
+++ b/src/main/webapp/worker.html
@@ -36,6 +36,10 @@
             <el-menu-item index="3">
                 <el-button @click="noticeButton" target="_blank">消息通知</el-button>
             </el-menu-item>
+
+            <el-menu-item index="3">
+                <el-button @click="chatButton" target="_blank">聊天室</el-button>
+            </el-menu-item>
         </el-menu>
     </el-aside>
 
@@ -482,6 +486,11 @@
         },
 
         methods: {
+
+
+            chatButton(){
+                window.location.href = "http://localhost:8080/qg-engineering-management-system/chat.html";
+            },
 
             createWebSocket() {
 
