--- a/src/main/webapp/notice.html
+++ b/src/main/webapp/notice.html
@@ -114,6 +114,9 @@
                 method: "post",
                 url: "http://localhost:8080/qg-engineering-management-system/user/getSession",
             }).then(function (resp) {
+                if (resp.data.data === '') {
+                    return ;
+                }
                 _this.username = resp.data.msg;
                 _this.position = resp.data.data.position;
             });
