--- a/src/main/webapp/personalInfo.html
+++ b/src/main/webapp/personalInfo.html
@@ -174,6 +174,9 @@
                 method: "post",
                 url: "http://localhost:8080/qg-engineering-management-system/user/getSession",
             }).then(function (resp) {
+                if (resp.data.data === '') {
+                    return ;
+                }
                 _this.username = resp.data.msg;
                 _this.position = resp.data.data.position;
                 _this.user.email = resp.data.data.email;
